@@ -1,3 +1,8 @@
+2007-05-16  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	PR fortran/31725
+	* gfortran.dg/substr_4.f: New test.
+
 2007-05-13  Release Manager
 
 	* GCC 4.2.0 released.
