@@ -1,3 +1,9 @@
+2007-05-16  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	PR fortran/31725
+	* trans-expr.c (gfc_conv_substring): Evaluate substring bounds
+	only once.
+
 2007-05-13  Release Manager
 
 	* GCC 4.2.0 released.
